--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       - fyp-grading
 
   mongodb:
-    image: mongodb:latest
+    image: mongo:latest
     container_name: mongodb
     ports:
       - '27017:27017'
@@ -100,7 +100,7 @@ services:
     ports:
       - '9191:9191'
     environment:
-      - eureka.client.serviceUrl.defaultZone=http://registry-registry:8761/eureka/
+      - eureka.client.serviceUrl.defaultZone=http://registry-service:8761/eureka/
       - spring.data.redis.host=redis
     networks:
       - fyp-grading
