--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,99 +2,9 @@ version: '3.7'
 name: fyp-grading
 
 services:
-  frontend:
-    build:
-      context: ../frontend/fyp-grading-frontend
-    container_name: frontend
-    image: frontend
-    ports:
-      - '80:80'
-    networks:
-      - fyp-grading
-
-  registry-service:
-    build:
-      context: ../cloud/fyp-grading-registry-service
-    image: registry-service
-    container_name: registry-service
-    ports:
-      - '8761:8761'
-    networks:
-      - fyp-grading
-
-  redis:
-    image: redis
-    container_name: redis
-    ports:
-      - '6379:6379'
-    networks:
-      - fyp-grading
-    environment:
-      - spring.data.redis.host=redis
-
-  rabbitmq:
-    image: rabbitmq:latest
-    container_name: rabbitmq
-    ports:
-      - '5672:5672'
-      - '15672:15672'
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin
-    networks:
-      - fyp-grading
-
-  postgres-admin:
-    image: postgres:latest
-    container_name: postgres-admin
-    ports:
-      - '5432:5432'
-    environment:
-      POSTGRES_DB: admin-db
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-    networks:
-      - fyp-grading
-
-  postgres-rubric:
-    image: postgres:latest
-    container_name: postgres-rubric
-    ports:
-      - '5433:5432'
-    environment:
-      POSTGRES_DB: rubric-db
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-    networks:
-      - fyp-grading
-
-  postgres-notification:
-    image: postgres:latest
-    container_name: postgres-notification
-    ports:
-      - '5434:5432'
-    environment:
-      POSTGRES_DB: notification-db
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-    networks:
-      - fyp-grading
-
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    ports:
-      - '27017:27017'
-    environment:
-      MONGO_INITDB_DATABASE: evaluation-db
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin
-    networks:
-      - fyp-grading
-
   api-gateway:
     build:
-      context: ../cloud/fyp-grading-api-gateway
+      context: ../fyp-grading-api-gateway
     image: api-gateway
     container_name: api-gateway
     ports:
@@ -108,79 +18,212 @@ services:
       replicas: 1
     depends_on:
       - redis
-      - registry-service
+
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - '6379:6379'
+    networks:
+      - fyp-grading
+    environment:
+      - spring.data.redis.host=redis
+
+  registry-service:
+    build:
+      context: ../fyp-grading-registry-service
+    image: registry-service:1.0
+    container_name: registry-service
+    ports:
+      - '8761:8761'
+    networks:
+      - fyp-grading
+
+  rabbitmq:
+    image: rabbitmq:latest
+    container_name: rabbitmq
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: admin
+    networks:
+      - fyp-grading
+
+  frontend:
+    build:
+      context: ../fyp-grading-frontend
+    container_name: frontend
+    image: frontend
+    ports:
+      - '80:80'
+    networks:
+      - fyp-grading
 
   admin-service:
     build:
-      context: ../backend/fyp-grading-admin-service
-    image: admin-service
+      context: ../fyp-grading-admin-service
+    image: admin-service:1.0
+#    deploy:
+#      replicas: 2
+    environment:
+      - DATABASE_URL=jdbc:postgresql://admin-db:5432/admin-db
+      - DATABASE_USERNAME=admin
+      - DATABASE_PASSWORD=admin
+      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=admin
+      - RABBITMQ_PASSWORD=admin
+      - SPRING_PROFILES_ACTIVE=prod
+      - PORT=8080
+#      - spring.data.redis.host=redis
+    expose:
+      - 8080
     networks:
       - fyp-grading
-    deploy:
-      replicas: 2
-    environment:
-      - spring.datasource.url= jdbc:postgresql://postgres-admin:5432/admin-db
-      - eureka.client.serviceUrl.defaultZone=http://registry-service:8761/eureka/
-      - spring.rabbitmq.host=rabbitmq
-      - spring.data.redis.host=redis
     depends_on:
       - rabbitmq
-      - redis
-      - postgres-admin
-      - registry-service
+#      - redis
+      - admin-db
+#      - registry-service
+
+  admin-db:
+    image: postgres:latest
+    container_name: admin-db
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_DB: admin-db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d admin-db -U admin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+    networks:
+      - fyp-grading
+#      - registry-service
 
   evaluation-service:
     build:
-      context: ../backend/fyp-grading-evaluation-service
-    image: evaluation-service
+      context: ../fyp-grading-evaluation-service
+    image: evaluation-service:1.0
     networks:
       - fyp-grading
-    deploy:
-      replicas: 2
+#    deploy:
+#      replicas: 2
     environment:
-      - eureka.client.serviceUrl.defaultZone=http://registry-service:8761/eureka/
-      - spring.data.redis.host=redis
-      - spring.data.mongodb.uri=mongodb://admin:admin@mongodb:27017/evaluation-db?authSource=admin&authMechanism=SCRAM-SHA-1
+      - DATABASE_URL=mongodb://admin:admin@mongodb:27017/evaluation-db?authSource=admin&authMechanism=SCRAM-SHA-1
+      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
+      - SPRING_PROFILES_ACTIVE=prod
+      - PORT=8080
+#      - spring.data.redis.host=redis
+    expose:
+      - 8080
     depends_on:
       - mongodb
-      - redis
-      - registry-service
+#      - redis
+#      - registry-service
+
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - '27017:27017'
+    environment:
+      MONGO_INITDB_DATABASE: evaluation-db
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+    healthcheck:
+      test: ["CMD-SHELL", "mongo --eval 'db.adminCommand(\"ping\")'"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+    networks:
+      - fyp-grading
 
   notification-service:
     build:
-      context: ../backend/fyp-grading-notification-service
-    image: notification-service
+      context: ../fyp-grading-notification-service
+    image: notification-service:1.0
     networks:
       - fyp-grading
-    deploy:
-      replicas: 1
+#    deploy:
+#      replicas: 1
     environment:
-      - spring.datasource.url= jdbc:postgresql://postgres-notification:5432/notification-db
-      - eureka.client.serviceUrl.defaultZone=http://registry-service:8761/eureka/
-      - spring.rabbitmq.host=rabbitmq
-      - spring.data.redis.host=redis
+      - DATABASE_URL=jdbc:postgresql://notification-db:5432/notification-db
+      - DATABASE_USERNAME=admin
+      - DATABASE_PASSWORD=admin
+      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=admin
+      - RABBITMQ_PASSWORD=admin
+      - SPRING_PROFILES_ACTIVE=prod
+      - PORT=8080
+#      - spring.data.redis.host=redis
     depends_on:
       - rabbitmq
-      - redis
-      - postgres-notification
-      - registry-service
+#      - redis
+      - notification-db
+#      - registry-service
+
+  notification-db:
+    image: postgres:latest
+    container_name: notification-db
+    ports:
+      - '5434:5432'
+    environment:
+      POSTGRES_DB: notification-db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d admin-db -U admin" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+    networks:
+      - fyp-grading
 
   rubric-service:
     build:
-      context: ../backend/fyp-grading-rubric-service
-    image: rubric-service
+      context: ../fyp-grading-rubric-service
+    image: rubric-service:1.0
     networks:
       - fyp-grading
-    deploy:
-        replicas: 1
+#    deploy:
+#        replicas: 1
     environment:
-        - spring.datasource.url= jdbc:postgresql://postgres-rubric:5432/rubric-db
-        - eureka.client.serviceUrl.defaultZone=http://registry-service:8761/eureka/
-        - spring.data.redis.host=redis
+      - DATABASE_URL=jdbc:postgresql://rubric-db:5432/rubric-db
+      - DATABASE_USERNAME=admin
+      - DATABASE_PASSWORD=admin
+      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
+      - SPRING_PROFILES_ACTIVE=prod
+      - PORT=8080
+    expose:
+      - 8080
     depends_on:
-        - postgres-rubric
-        - redis
-        - registry-service
+        - rubric-db
+#        - redis
+#        - registry-service
+
+  rubric-db:
+    image: postgres:latest
+    container_name: rubric-db
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_DB: rubric-db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    networks:
+      - fyp-grading
 
 networks:
   fyp-grading:
