--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     container_name: registry-service
     ports:
       - '8761:8761'
+    expose:
+      - 8761
     networks:
       - fyp-grading
 
@@ -48,7 +50,19 @@ services:
       - SPRING_PROFILES_ACTIVE=git,prod
       - GIT_REPO_URI=https://github.com/FirasKhalife/fyp-grading-config.git
       - GIT_BRANCH=cloud-course
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
       - PORT=8071
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    expose:
+      - 8071
     networks:
       - fyp-grading
 
@@ -61,6 +75,15 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: admin
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
+    expose:
+      - 5672
+      - 15672
     networks:
       - fyp-grading
 
@@ -71,6 +94,8 @@ services:
     container_name: frontend
     ports:
       - '80:80'
+    expose:
+      - 80
     networks:
       - fyp-grading
 
@@ -85,24 +110,34 @@ services:
       - DATABASE_URL=jdbc:postgresql://admin-db:5432/admin-db
       - DATABASE_USERNAME=admin
       - DATABASE_PASSWORD=admin
-      - CONFIG_SERVER_URL=http://config-server:8071/
-      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
-      - RABBITMQ_HOST=rabbitmq
-      - RABBITMQ_PORT=5672
-      - RABBITMQ_USERNAME=admin
-      - RABBITMQ_PASSWORD=admin
-      - SPRING_PROFILES_ACTIVE=prod
+      - CONFIG_SERVER_URL=${CONFIG_SERVER_URL}
+      - REGISTRY_SERVICE_URL=${REGISTRY_SERVICE_URL}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - PORT=8080
 #      - spring.data.redis.host=redis
+    depends_on:
+      config-server:
+        condition: service_healthy
+#      - registry-service
+      admin-db:
+        condition: service_healthy
+#      - redis
+      rabbitmq:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     expose:
       - 8080
     networks:
       - fyp-grading
-    depends_on:
-      - rabbitmq
-#      - redis
-      - admin-db
-#      - registry-service
 
   admin-db:
     image: postgres:latest
@@ -119,32 +154,48 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+    expose:
+      - 5432
     networks:
       - fyp-grading
-#      - registry-service
 
   evaluation-service:
     build:
       context: ../fyp-grading-evaluation-service
     image: evaluation-service:1.0
     container_name: evaluation-service
-    networks:
-      - fyp-grading
 #    deploy:
 #      replicas: 2
     environment:
       - DATABASE_URL=mongodb://admin:admin@mongodb:27017/evaluation-db?authSource=admin&authMechanism=SCRAM-SHA-1
-      - CONFIG_SERVER_URL=http://config-server:8071/
-      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
-      - SPRING_PROFILES_ACTIVE=prod
+      - CONFIG_SERVER_URL=${CONFIG_SERVER_URL}
+      - REGISTRY_SERVICE_URL=${REGISTRY_SERVICE_URL}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - PORT=8080
 #      - spring.data.redis.host=redis
+    depends_on:
+      config-server:
+        condition: service_healthy
+#      - registry-service
+      mongodb:
+        condition: service_healthy
+#      - redis
+      rabbitmq:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     expose:
       - 8080
-    depends_on:
-      - mongodb
-#      - redis
-#      - registry-service
+    networks:
+      - fyp-grading
 
   mongodb:
     image: mongo:latest
@@ -161,6 +212,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+    expose:
+      - 27017
     networks:
       - fyp-grading
 
@@ -169,28 +222,40 @@ services:
       context: ../fyp-grading-notification-service
     image: notification-service:1.0
     container_name: notification-service
-    networks:
-      - fyp-grading
 #    deploy:
 #      replicas: 1
     environment:
       - DATABASE_URL=jdbc:postgresql://notification-db:5432/notification-db
       - DATABASE_USERNAME=admin
       - DATABASE_PASSWORD=admin
-      - CONFIG_SERVER_URL=http://config-server:8071/
-      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
-      - RABBITMQ_HOST=rabbitmq
-      - RABBITMQ_PORT=5672
-      - RABBITMQ_USERNAME=admin
-      - RABBITMQ_PASSWORD=admin
-      - SPRING_PROFILES_ACTIVE=prod
+      - CONFIG_SERVER_URL=${CONFIG_SERVER_URL}
+      - REGISTRY_SERVICE_URL=${REGISTRY_SERVICE_URL}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - PORT=8080
 #      - spring.data.redis.host=redis
     depends_on:
-      - rabbitmq
-#      - redis
-      - notification-db
+      config-server:
+        condition: service_healthy
 #      - registry-service
+      notification-db:
+        condition: service_healthy
+#      - redis
+      rabbitmq:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    expose:
+      - 8080
+    networks:
+      - fyp-grading
 
   notification-db:
     image: postgres:latest
@@ -207,6 +272,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+    expose:
+      - 5434
     networks:
       - fyp-grading
 
@@ -215,24 +282,39 @@ services:
       context: ../fyp-grading-rubric-service
     image: rubric-service:1.0
     container_name: rubric-service
-    networks:
-      - fyp-grading
 #    deploy:
 #        replicas: 1
     environment:
       - DATABASE_URL=jdbc:postgresql://rubric-db:5432/rubric-db
       - DATABASE_USERNAME=admin
       - DATABASE_PASSWORD=admin
-      - CONFIG_SERVER_URL=http://config-server:8071/
-      - REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
-      - SPRING_PROFILES_ACTIVE=prod
+      - CONFIG_SERVER_URL=${CONFIG_SERVER_URL}
+      - REGISTRY_SERVICE_URL=${REGISTRY_SERVICE_URL}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
       - PORT=8080
+    depends_on:
+      config-server:
+        condition: service_healthy
+#      - registry-service
+      rubric-db:
+        condition: service_healthy
+#      - redis
+      rabbitmq:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     expose:
       - 8080
-    depends_on:
-        - rubric-db
-#        - redis
-#        - registry-service
+    networks:
+      - fyp-grading
 
   rubric-db:
     image: postgres:latest
@@ -243,6 +325,14 @@ services:
       POSTGRES_DB: rubric-db
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d admin-db -U admin" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+    expose:
+      - 5433
     networks:
       - fyp-grading
 
