cloud-course refactor and optimize docker-compose

--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
 
 # Spring
 SPRING_PROFILES_ACTIVE=prod
+
+# Networks
+GLOBAL_NETWORK=fyp-grading
