cloud-course refactoring and adding configuration

--- a/.env
+++ b/.env
@@ -7,13 +7,23 @@ RABBITMQ_USERNAME=admin
 RABBITMQ_PASSWORD=admin
 
 # Config Server
-CONFIG_SERVER_URL=http://config-server:8071/
+CONFIG_SERVER_URL=http://config-server:8071/  # Exclusive to registry server
 
 # Registry Server
-REGISTRY_SERVICE_URL=http://registry-service:8761/eureka/
+REGISTRY_SERVER_URL=http://registry-service:8761/eureka/
 
 # Spring
 SPRING_PROFILES_ACTIVE=prod
 
 # Networks
 GLOBAL_NETWORK=fyp-grading
+
+# Service Names
+API_GATEWAY_NAME=api-gateway
+REGISTRY_SERVER_NAME=registry-server
+CONFIG_SERVER_NAME=config-server
+ADMIN_SERVICE_NAME=admin-service
+EVALUATION_SERVICE_NAME=evaluation-service
+NOTIFICATION_SERVICE_NAME=notification-service
+RUBRIC_SERVICE_NAME=rubric_service
+FRONTEND_SERVICE_NAME=frontend
