--- a/common.yml
+++ b/common.yml
@@ -3,21 +3,33 @@ services:
     networks:
       - ${GLOBAL_NETWORK}
 
-  base-service:
+  spring-service:
     extends:
       service: network-service
     environment:
-      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - REGISTRY_SERVER_URL=${REGISTRY_SERVER_URL}
       - RABBITMQ_HOST=${RABBITMQ_HOST}
       - RABBITMQ_PORT=${RABBITMQ_PORT}
       - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
       - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
-      - CONFIG_SERVER_URL=${CONFIG_SERVER_URL}
-      - REGISTRY_SERVICE_URL=${REGISTRY_SERVICE_URL}
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+    healthcheck:
+      test: [] # to override
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     deploy:
       resources:
         limits:
           memory: 700m
+
+  postgres-service:
+    extends:
+      service: network-service
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d admin-db -U admin" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
