cloud-course add redis, refactor, minor fixes

--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ EVALUATION_SERVICE_NAME=evaluation-service
 NOTIFICATION_SERVICE_NAME=notification-service
 RUBRIC_SERVICE_NAME=rubric_service
 FRONTEND_SERVICE_NAME=frontend
+
+# Redis
+REDIS_PASSWORD=admin
