--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.7'
 name: fyp-grading
 
+# TODO: ADD VOLUMES TO APPROPRIATE SERVICES
 services:
   api-gateway:
     build:
@@ -9,14 +10,18 @@ services:
     container_name: ${API_GATEWAY_NAME}
     environment:
       - SPRING_APPLICATION_NAME=${API_GATEWAY_NAME}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
       - BUILD_VERSION=1.0
       - PORT=9191
-#      - spring.data.redis.host=redis
     ports:
       - '9191:9191'
     expose:
       - 9191
     depends_on:
+      redis:
+        condition: service_healthy
       admin-service:
         condition: service_healthy
       evaluation-service:
@@ -25,20 +30,27 @@ services:
         condition: service_healthy
       rubric-service:
         condition: service_healthy
-#      - redis
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:9191/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
 
   redis:
-    image: redis
+    image: redis:latest
     container_name: redis
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - '6379:6379'
-    environment:
-      - spring.data.redis.host=redis
+    expose:
+      - 6379
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     extends:
       file: common.yml
       service: network-service
@@ -57,7 +69,7 @@ services:
     expose:
       - 8761
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8761/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
@@ -84,7 +96,7 @@ services:
       registry-server:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1"]
+      test: ["CMD-SHELL", "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"]
     extends:
       file: common.yml
       service: spring-service
@@ -129,8 +141,6 @@ services:
       context: ../fyp-grading-admin-service
     image: ${ADMIN_SERVICE_NAME}:1.0
     container_name: ${ADMIN_SERVICE_NAME}
-#    deploy:
-#      replicas: 2
     environment:
       - DATABASE_URL=jdbc:postgresql://admin-db:5432/admin-db
       - DATABASE_USERNAME=admin
@@ -140,7 +150,6 @@ services:
       - SPRING_APPLICATION_NAME=${ADMIN_SERVICE_NAME}
       - BUILD_VERSION=1.0
       - PORT=8080
-#      - spring.data.redis.host=redis
     expose:
       - 8080
     depends_on:
@@ -148,9 +157,8 @@ services:
         condition: service_healthy
       admin-db:
         condition: service_healthy
-#      - redis
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
@@ -173,8 +181,6 @@ services:
       context: ../fyp-grading-evaluation-service
     image: ${EVALUATION_SERVICE_NAME}:1.0
     container_name: ${EVALUATION_SERVICE_NAME}
-#    deploy:
-#      replicas: 2
     environment:
       - DATABASE_URL=mongodb://admin:admin@mongodb:27017/evaluation-db?authSource=admin&authMechanism=SCRAM-SHA-1
       - ADMIN_SERVICE_NAME=${ADMIN_SERVICE_NAME}
@@ -182,7 +188,6 @@ services:
       - SPRING_APPLICATION_NAME=${EVALUATION_SERVICE_NAME}
       - BUILD_VERSION=1.0
       - PORT=8080
-#      - spring.data.redis.host=redis
     expose:
       - 8080
     depends_on:
@@ -190,9 +195,8 @@ services:
         condition: service_healthy
       mongodb:
         condition: service_healthy
-#      - redis
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
@@ -223,8 +227,6 @@ services:
       context: ../fyp-grading-notification-service
     image: ${NOTIFICATION_SERVICE_NAME}:1.0
     container_name: ${NOTIFICATION_SERVICE_NAME}
-#    deploy:
-#      replicas: 1
     environment:
       - DATABASE_URL=jdbc:postgresql://notification-db:5432/notification-db
       - DATABASE_USERNAME=admin
@@ -232,7 +234,6 @@ services:
       - SPRING_APPLICATION_NAME=${NOTIFICATION_SERVICE_NAME}
       - BUILD_VERSION=1.0
       - PORT=8080
-#      - spring.data.redis.host=redis
     expose:
       - 8080
     depends_on:
@@ -240,9 +241,8 @@ services:
         condition: service_healthy
       notification-db:
         condition: service_healthy
-#      - redis
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
@@ -265,8 +265,6 @@ services:
       context: ../fyp-grading-rubric-service
     image: ${RUBRIC_SERVICE_NAME}:1.0
     container_name: ${RUBRIC_SERVICE_NAME}
-#    deploy:
-#        replicas: 1
     environment:
       - DATABASE_URL=jdbc:postgresql://rubric-db:5432/rubric-db
       - DATABASE_USERNAME=admin
@@ -281,9 +279,8 @@ services:
         condition: service_healthy
       rubric-db:
         condition: service_healthy
-#      - redis
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent localhost:${PORT}/actuator/health/readiness | grep UP || exit 1" ]
+      test: [ "CMD-SHELL", "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1" ]
     extends:
       file: common.yml
       service: spring-service
