cloud-course refactoring docker compose files

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -11,6 +11,8 @@ CONFIG_SERVER_URL=http://config-server:8071/  # Exclusive to registry server
 
 # Registry Server
 REGISTRY_SERVER_URL=http://registry-service:8761/eureka/
+GIT_REPO_URI=https://github.com/FirasKhalife/fyp-grading-config.git
+GIT_BRANCH=cloud-course
 
 # Spring
 SPRING_PROFILES_ACTIVE=prod
