cloud-course refactoring and adding monitoring

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -17,8 +17,9 @@ GIT_BRANCH=cloud-course
 # Spring
 SPRING_PROFILES_ACTIVE=prod
 
-# Networks
-GLOBAL_NETWORK=fyp-grading
+# Docker Infrastructure
+GLOBAL_NETWORK_NAME=fyp-grading
+PROJECT_NAME=fyp-grading
 
 # Service Names
 API_GATEWAY_NAME=api-gateway
