--- a/docker-compose/docker-compose.grafana.yml
+++ b/docker-compose/docker-compose.grafana.yml
@@ -1,5 +1,5 @@
 version: '3.7'
-name: fyp-grading
+name: ${PROJECT_NAME}
 
 services:
   read:
@@ -11,7 +11,7 @@ services:
       - '7946'
       - '9095'
     volumes:
-      - ./grafana-config/loki-config.yaml:/etc/loki/config.yaml
+      - ./config/grafana/loki-config.yaml:/etc/loki/config.yaml
     depends_on:
       - minio
     healthcheck:
@@ -33,7 +33,7 @@ services:
       - '7946'
       - '9095'
     volumes:
-      - ./grafana-config/loki-config.yaml:/etc/loki/config.yaml
+      - ./config/grafana/loki-config.yaml:/etc/loki/config.yaml
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 10s
@@ -48,7 +48,7 @@ services:
     image: grafana/alloy:latest
     container_name: alloy
     volumes:
-      - ./grafana-config/alloy-local-config.yaml:/etc/alloy/config.alloy:ro
+      - ./config/grafana/alloy-local-config.yaml:/etc/alloy/config.alloy:ro
       - /var/run/docker.sock:/var/run/docker.sock
     command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
     ports:
@@ -94,26 +94,14 @@ services:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+    volumes:
+      - ./config/grafana/datasource/yml:/etc/grafana/provisioning/datasources/datasource.yml
     depends_on:
       - gateway
     entrypoint:
       - sh
       - -euc
-      - |
-        mkdir -p /etc/grafana/provisioning/datasources
-        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
-        apiVersion: 1
-        datasources:
-          - name: Loki
-            type: loki
-            access: proxy
-            url: http://gateway:3100
-            jsonData:
-              httpHeaderName1: "X-Scope-OrgID"
-            secureJsonData:
-              httpHeaderValue1: "tenant1"
-        EOF
-        /run.sh
+      - /run.sh
     ports:
       - "3000:3000"
     healthcheck:
@@ -129,7 +117,7 @@ services:
     image: grafana/loki:3.1.0
     container_name: loki-backend
     volumes:
-      - ./grafana-config/loki-config.yaml:/etc/loki/config.yaml
+      - ./config/grafana/loki-config.yaml:/etc/loki/config.yaml
     ports:
       - '3100'
       - '7946'
@@ -139,7 +127,6 @@ services:
     extends:
       file: common.yml
       service: network-service
-
 
   gateway:
     image: nginx:latest
@@ -214,4 +201,4 @@ services:
 
 networks:
   fyp-grading:
-    name: ${GLOBAL_NETWORK}
+    name: ${GLOBAL_NETWORK_NAME}
