--- a/docker-compose/docker-compose.messaging.yml
+++ b/docker-compose/docker-compose.messaging.yml
@@ -1,5 +1,5 @@
 version: '3.7'
-name: fyp-grading
+name: ${PROJECT_NAME}
 
 services:
   rabbitmq:
@@ -26,4 +26,4 @@ services:
 
 networks:
   fyp-grading:
-    name: ${GLOBAL_NETWORK}
+    name: ${GLOBAL_NETWORK_NAME}
