--- a/docker-compose/docker-compose.spring-cloud.yml
+++ b/docker-compose/docker-compose.spring-cloud.yml
@@ -1,5 +1,5 @@
 version: '3.7'
-name: fyp-grading
+name: ${PROJECT_NAME}
 
 services:
   registry-server:
@@ -83,4 +83,4 @@ services:
 
 networks:
   fyp-grading:
-    name: ${GLOBAL_NETWORK}
+    name: ${GLOBAL_NETWORK_NAME}
