--- a/docker-compose/docker-compose.spring-cloud.yml
+++ b/docker-compose/docker-compose.spring-cloud.yml
@@ -54,10 +54,15 @@ services:
     image: ${API_GATEWAY_NAME}:1.0
     container_name: ${API_GATEWAY_NAME}
     environment:
-      - SPRING_APPLICATION_NAME=${API_GATEWAY_NAME}
+      - AUTH_SERVER_URL=http://keycloak-server:8080/realms/master
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - AUTH_SERVER_URL=http://localhost:7080/realms/master
+      - ALLOWED_ORIGINS=http://localhost:[*]
+      - ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+      - ALLOWED_HEADERS=Authorization,Content-Type
+      - SPRING_APPLICATION_NAME=${API_GATEWAY_NAME}
       - BUILD_VERSION=1.0
       - PORT=9191
     ports:
@@ -65,6 +70,8 @@ services:
     expose:
       - 9191
     depends_on:
+      keycloak-server:
+        condition: service_healthy
       redis:
         condition: service_healthy
       admin-service:
